fix: update InAppBrowserNitro version to 1.3.0 and adjust package.json exports

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "types": "./lib/typescript/src/index.d.ts",
   "exports": {
     ".": {
-      "import": "./lib/module/index.js",
-      "require": "./lib/module/index.js",
-      "types": "./lib/typescript/src/index.d.ts"
+      "source": "./src/index.tsx",
+      "types": "./lib/typescript/src/index.d.ts",
+      "default": "./lib/module/index.js"
     },
     "./package.json": "./package.json"
   },
