--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -1,18 +1,26 @@
-project(inappbrowsernitro)
+project(InappbrowserNitro)
 cmake_minimum_required(VERSION 3.9.0)
 
-set(PACKAGE_NAME inappbrowsernitro)
-set(CMAKE_VERBOSE_MAKEFILE ON)
-set(CMAKE_CXX_STANDARD 20)
+set (PACKAGE_NAME InappbrowserNitro)
+set (CMAKE_VERBOSE_MAKEFILE ON)
+set (CMAKE_CXX_STANDARD 20)
+
+# Enable Raw Props parsing in react-native (for Nitro Views)
+add_compile_options(-DRN_SERIALIZABLE_STATE=1)
 
 # Define C++ library and add all sources
-add_library(${PACKAGE_NAME} SHARED src/main/cpp/cpp-adapter.cpp)
+add_library(${PACKAGE_NAME} SHARED
+        src/main/cpp/cpp-adapter.cpp
+)
 
 # Add Nitrogen specs :)
-include(${CMAKE_SOURCE_DIR}/../nitrogen/generated/android/inappbrowsernitro+autolinking.cmake)
+include(${CMAKE_SOURCE_DIR}/../nitrogen/generated/android/InappbrowserNitro+autolinking.cmake)
 
 # Set up local includes
-include_directories("src/main/cpp" "../cpp")
+include_directories(
+        "src/main/cpp"
+        "../cpp"
+)
 
 find_library(LOG_LIB log)
 
@@ -20,5 +28,5 @@ find_library(LOG_LIB log)
 target_link_libraries(
         ${PACKAGE_NAME}
         ${LOG_LIB}
-        android # <-- Android core
+        android                                   # <-- Android core
 )
