--- a/android/build.gradle
+++ b/android/build.gradle
@@ -137,6 +137,9 @@ dependencies {
 
   // Add a dependency on NitroModules
   implementation project(":react-native-nitro-modules")
+
+  implementation "androidx.browser:browser:1.7.0"
+  implementation "androidx.core:core-ktx:1.13.1"
 }
 
 if (isNewArchitectureEnabled()) {
