--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,2 +1,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+	<queries>
+		<intent>
+			<action android:name="android.intent.action.VIEW" />
+			<data android:scheme="http" />
+		</intent>
+		<intent>
+			<action android:name="android.intent.action.VIEW" />
+			<data android:scheme="https" />
+		</intent>
+
+		<intent>
+			<action android:name="android.support.customtabs.action.CustomTabsService" />
+		</intent>
+
+		<package android:name="com.android.chrome" />
+		<package android:name="com.chrome.beta" />
+		<package android:name="com.chrome.dev" />
+		<package android:name="com.chrome.canary" />
+		<package android:name="com.brave.browser" />
+		<package android:name="com.microsoft.emmx" />
+	</queries>
 </manifest>
