Add Nitro bindings generation step to Android and iOS build workflows

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -66,6 +66,9 @@ jobs:
       - name: Install dependencies (yarn)
         run: yarn install --immutable
 
+      - name: Generate Nitro bindings
+        run: yarn codegen
+
       - name: Disable new architecture in Podfile
         if: matrix.arch == 'old'
         run: sed -i "" "s/ENV\['RCT_NEW_ARCH_ENABLED'\] = '1'/ENV['RCT_NEW_ARCH_ENABLED'] = '0'/g" example/ios/Podfile
