--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -36,12 +36,8 @@ concurrency:
 
 jobs:
   build:
-    name: Build Android Example App (${{ matrix.arch }})
+    name: Build Android Example App
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        arch: [new, old]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -53,10 +49,6 @@ jobs:
 
       - name: Generate Nitro bindings
         run: yarn codegen
-
-      - name: Disable new architecture in gradle.properties
-        if: matrix.arch == 'old'
-        run: sed -i "s/newArchEnabled=true/newArchEnabled=false/g" example/android/gradle.properties
 
       - name: Setup JDK 17
         uses: actions/setup-java@v5
